@@ -3,7 +3,6 @@ contents_at_end contents_at_end.texi
 contents_in_middle_chapter contents_in_middle_chapter.texi
 contents_in_middle_section contents_in_middle_section.texi
 double_contents double_contents.texi
-double_contents_setcontentsaftertitlepage double_contents_setcontentsaftertitlepage.texi
 double_contents_chapter double_contents.texi --split chapter
 double_contents_section double_contents.texi --split section
 double_contents_nodes double_contents.texi --split node
@@ -16,7 +15,6 @@ contents_at_end_inline contents_at_end.texi --set-customization-variable 'INLINE
 contents_in_middle_chapter_inline contents_in_middle_chapter.texi --set-customization-variable 'INLINE_CONTENTS 1'
 contents_in_middle_section_inline contents_in_middle_section.texi --set-customization-variable 'INLINE_CONTENTS 1'
 double_contents_inline double_contents.texi --set-customization-variable 'INLINE_CONTENTS 1'
-double_contents_setcontentsaftertitlepage_inline double_contents_setcontentsaftertitlepage.texi --set-customization-variable 'INLINE_CONTENTS 1'
 double_contents_inline_chapter double_contents.texi --set-customization-variable 'INLINE_CONTENTS 1' --split chapter
 double_contents_inline_section double_contents.texi --set-customization-variable 'INLINE_CONTENTS 1' --split section
 double_contents_inline_nodes double_contents.texi --set-customization-variable 'INLINE_CONTENTS 1' --split node
@@ -25,8 +23,6 @@ no_content_do_contents_inline no_content.texi --set-customization-variable 'INLI
 no_content_setcatpage_inline no_content_setcatpage.texi --set-customization-variable 'INLINE_CONTENTS 1'
 no_content_setcatpage_do_contents_inline no_content_setcatpage.texi --set-customization-variable 'INLINE_CONTENTS 1' --set-customization-variable 'contents 1'
 double_contents_book double_contents.texi --init book.pm
-double_contents_setcontentsaftertitlepage_book double_contents_setcontentsaftertitlepage.texi --init book.pm
-double_contents_setcontentsaftertitlepage_book_chapter double_contents_setcontentsaftertitlepage.texi --init book.pm --split chapter
 contents_and_parts contents_and_parts.texi
 
 contents_at_begin_info contents_at_begin.texi --info
@@ -34,5 +30,4 @@ contents_at_end_info contents_at_end.texi  --info
 contents_in_middle_chapter_info contents_in_middle_chapter.texi --info
 contents_in_middle_section_info contents_in_middle_section.texi --info
 double_contents_info double_contents.texi --info
-double_contents_setcontentsaftertitlepage_info double_contents_setcontentsaftertitlepage.texi --info
 
